--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>DC Memorial Tour and Scavenger Hunt</h1>
+            <h1>CMotivational Page</h1>
             <hr>
             <p>Tonight we will take you down to the National Mall to learn about some of the United States' most crucial points of history.</p>
             <a href="#services" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
