--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>CMotivational Page</h1>
+            <h1>Motivational Page</h1>
             <hr>
-            <p>Tonight we will take you down to the National Mall to learn about some of the United States' most crucial points of history.</p>
+            <p>This page is for you whenever you need something to motivate you or cheer you up in a time of need.</p>
             <a href="#services" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
