trying to fix css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>Motivational Page</h1>
             <hr>
             <p>This page is for you whenever you need something to motivate you or cheer you up in a time of need.</p>
-            <a href="#services" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#services" class="btn btn-primary btn-xl page-scroll">Click Here</a>
         </div>
     </div>
 </header>
