--- a/css/main.scss
+++ b/css/main.scss
@@ -33,8 +33,8 @@
 // }
 
 // variables.less
-$theme-primary: #39FF14;
-$theme-dark: #e0218a;
+$theme-primary: #F05F40;
+$theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
