--- a/css/main.scss
+++ b/css/main.scss
@@ -1,28 +1,31 @@
+---
+---
+
 @charset "utf-8";
 
 // Example Defaults
 // $base-font-family: Helvetica, Arial, sans-serif;
-// $base-font-size: 16px;
-// $small-font-size: $base-font-size * 0.875;
+// $base-font-size:   16px;
+// $small-font-size:  $base-font-size * 0.875;
 // $base-line-height: 1.5;
 
-// $spacing-unit: 30px;
+// $spacing-unit:     30px;
 
-// $text-color: #111;
+// $text-color:       #111;
 // $background-color: #fdfdfd;
-// $brand-color: #2a7ae2;
+// $brand-color:      #2a7ae2;
 
-// $grey-color: #828282;
+// $grey-color:       #828282;
 // $grey-color-light: lighten($grey-color, 40%);
-// $grey-color-dark: darken($grey-color, 25%);
+// $grey-color-dark:  darken($grey-color, 25%);
 
-// Width of the content area
-$content-width: 800px;
+// // Width of the content area
+// $content-width:    800px;
 
-$on-palm: 600px;
-$on-laptop: 800px;
+// $on-palm:          600px;
+// $on-laptop:        800px;
 
-// Using media queries like this:
+// Using media queries with like this:
 // @include media-query($on-palm) {
 //     .wrapper {
 //         padding-right: $spacing-unit / 2;
@@ -30,10 +33,12 @@ $on-laptop: 800px;
 //     }
 // }
 
-// variables.scss
+// variables.less
 $theme-primary: #E0218A;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import "mixins";
-@import "base";
+@import
+        "mixins",
+        "base"
+;
