--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -11,7 +11,7 @@
         <div class="row no-gutter no-padding">
             <div class="col-lg-4 col-sm-6" style="width:455;  height:337;">
                 <a href="javascript:lincoln()" class="portfolio-box" >
-                    <img src="img/portfolio/lincoln_2.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/mario.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
