--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -87,15 +87,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6" style="width:455;  height:337;">
-                <a href="files/Zello.pdf" class="portfolio-box">
-                    <img src="img/portfolio/walkie_2.png" class="img-responsive" alt="" >
+                <a href="files/campus_map.jpg" class="portfolio-box">
+                    <img src="img/portfolio/campus_map.png" class="img-responsive" alt="" >
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Category
                             </div>
                             <div class="project-name">
-                                Zello Tutorial
+                                Campus Map
                             </div>
                         </div>
                     </div>
